--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
 
     <header>
-        <img style="width: 15%; min-width: 300px;" src="{{ url_for('static', filename='yodai-logo.png') }}" alt="logo">
+        <img style="width: 15%; min-width: 300px;" src="/static/yodai-logo.png" alt="logo">
     </header>
 
     <section>
@@ -93,24 +93,24 @@
         <h2>Who We Are</h2>
         <div class="team-section">
             <div class="team-member">
-                <img src="{{ url_for('static', filename='yasemin.jpeg') }}" alt="Member 1">
+                <img src="/static/yasemin.jpeg" alt="Member 1">
                 <p>Yasemin AKIN</p>
             </div>
             <div class="team-member">
-                <img src="{{ url_for('static', filename='deniz.jpeg') }}" alt="Member 2">
+                <img src="/static/deniz.jpeg" alt="Member 2">
                 <p>Deniz Can ÖZDEMİR</p>
             </div>
             <div class="team-member">
-                <img src="{{ url_for('static', filename='ogi2.png') }}" alt="Member 3">
+                <img src="/static/ogi2.png" alt="Member 3">
                 <p>Oğulcan KARAKOLLUKÇU</p>
             </div>
             <div class="team-member">
-                <img src="{{ url_for('static', filename='alphan_pp.jpeg') }}" alt="Member 4">
+                <img src="/static/alphan_pp.jpeg" alt="Member 4">
                 <p>Alphan TULUKCU</p>
 
             </div>
             <div class="team-member">
-                <img src="{{ url_for('static', filename='ilhami.jpeg') }}" alt="Member 5">
+                <img src="/static/ilhami.jpeg" alt="Member 5">
                 <p>İlhami ULUĞTÜRKKAN</p>
             </div>
         </div>
