documents feature added

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
     <section>
         <h2>Documents</h2>
-        <ul>
-            <li>Document will be shown here!</li>
-            <!-- Add new announcements directly here -->
-        </ul>
+        <iframe src="documents/quiz1sol-1.pdf" width="100%" height="500px">
+            This browser does not support PDFs. Please download the PDF to view it: <a href="documents/quiz1sol-1.pdf">Download PDF</a>.
+        </iframe>
     </section>
+    
 
     <section>
         <h2>Who We Are</h2>
