--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
             background-color: #333;
             color: white;
         }
+        /* Hide iframe initially */
+        #pdfViewer {
+            display: none;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -68,59 +73,42 @@
     </header>
 
     <section>
-        <h2>Welcome to yodai Group</h2>
+        <h2>Welcome to Yodai Group</h2>
         <p>Welcome to the official announcements page of Yodai Group! Stay updated with the latest information and news about our projects and activities.</p>
     </section>
 
     <section>
-        <h2>Announcements</h2>
-        <ul>
-            <li>First announcement: Meeting scheduled for October 10, 2024.</li>
-            <li>Second announcement: New project phase starting next week.</li>
-            <!-- Add new announcements directly here -->
-        </ul>
-    </section>
-
-    <section>
         <h2>Documents</h2>
-        <iframe src="documents/quiz1sol-1.pdf" width="100%" height="500px">
-            This browser does not support PDFs. Please download the PDF to view it: <a href="documents/quiz1sol-1.pdf">Download PDF</a>.
+        <ul id="documentList">
+            <li><a href="#" onclick="showPDF('documents/study1.pdf')">Document 1</a></li>
+            <li><a href="#" onclick="showPDF('documents/study2.pdf')">Document 2</a></li>
+            <li><a href="#" onclick="showPDF('documents/study3.pdf')">Document 3</a></li>
+        </ul>
+
+        <!-- Hidden iframe, which will be shown when a document is clicked -->
+        <iframe id="pdfViewer" width="100%" height="500px">
+            This browser does not support PDFs. Please download the PDF to view it: 
+            <a href="documents/document1.pdf">Download PDF</a>.
         </iframe>
     </section>
-    
 
     <section>
         <h2>Who We Are</h2>
-        <div class="team-section">
-            <div class="team-member">
-                <img src="static/yasemin.jpeg" alt="Member 1">
-                <p>Yasemin AKIN</p>
-            </div>
-            <div class="team-member">
-                <img src="static/deniz.jpeg" alt="Member 2">
-                <p>Deniz Can ÖZDEMİR</p>
-            </div>
-            <div class="team-member">
-                <img src="static/ogi2.png" alt="Member 3">
-                <p>Oğulcan KARAKOLLUKÇU</p>
-            </div>
-            <div class="team-member">
-                <img src="static/alphan_pp.jpeg" alt="Member 4">
-                <p>Alphan TULUKCU</p>
-
-            </div>
-            <div class="team-member">
-                <img src="static/ilhami.jpeg" alt="Member 5">
-                <p>İlhami ULUĞTÜRKKAN</p>
-            </div>
-        </div>
-        <p>We are Yodai Group, a passionate team of developers and enthusiasts dedicated to building solutions that make a difference. Our goal is to deliver high-quality software projects that solve real-world problems.</p>
-        <p>We specialize in web development, AI, and data-driven solutions, and are always open to new challenges and collaborations. Join us on our journey to create impact and innovation.</p>
+        <!-- Your existing team member code -->
     </section>
 
     <footer>
         &copy; 2024 Yodai Group. All rights reserved.
     </footer>
+
+    <script>
+        // Function to display the selected PDF
+        function showPDF(pdfUrl) {
+            var iframe = document.getElementById('pdfViewer');
+            iframe.src = pdfUrl;
+            iframe.style.display = 'block'; // Show the iframe when a PDF is selected
+        }
+    </script>
 
 </body>
 </html>
