--- a/index.html
+++ b/index.html
@@ -94,7 +94,31 @@
 
     <section>
         <h2>Who We Are</h2>
-        <!-- Your existing team member code -->
+        <div class="team-section">
+            <div class="team-member">
+                <img src="/static/yasemin.jpeg" alt="Member 1">
+                <p>Yasemin AKIN</p>
+            </div>
+            <div class="team-member">
+                <img src="/static/deniz.jpeg" alt="Member 2">
+                <p>Deniz Can ÖZDEMİR</p>
+            </div>
+            <div class="team-member">
+                <img src="/static/ogi2.png" alt="Member 3">
+                <p>Oğulcan KARAKOLLUKÇU</p>
+            </div>
+            <div class="team-member">
+                <img src="/static/alphan_pp.jpeg" alt="Member 4">
+                <p>Alphan TULUKCU</p>
+
+            </div>
+            <div class="team-member">
+                <img src="/static/ilhami.jpeg" alt="Member 5">
+                <p>İlhami ULUĞTÜRKKAN</p>
+            </div>
+        </div>
+        <p>We are Yodai Group, a passionate team of developers and enthusiasts dedicated to building solutions that make a difference. Our goal is to deliver high-quality software projects that solve real-world problems.</p>
+        <p>We specialize in web development, AI, and data-driven solutions, and are always open to new challenges and collaborations. Join us on our journey to create impact and innovation.</p>
     </section>
 
     <footer>
