--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
+            background: linear-gradient(to bottom, #f4f4f4, #bbc4b8);            margin: 0;
             padding: 0;
         }
         header {
-            background-color: #333;
+            background-color: rgba(51, 51, 51, 0.91);
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -23,12 +22,12 @@
         section {
             padding: 20px;
             margin: 10px 0;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.52);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 1000px;
             margin-left: auto;
             margin-right: auto;
-            border-radius: 25%;
+            border-radius: 1rem;
         }
         h2 {
             border-bottom: 2px solid #333;
