--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     <section>
         <h2>Documents</h2>
         <ul id="documentList">
-            <li><a href="#" onclick="togglePDF('documents/document1.pdf')">Document 1</a></li>
-            <li><a href="#" onclick="togglePDF('documents/document2.pdf')">Document 2</a></li>
-            <li><a href="#" onclick="togglePDF('documents/document3.pdf')">Document 3</a></li>
+            <li><a href="#" onclick="togglePDF('documents/study1.pdf')">Document 1</a></li>
+            <li><a href="#" onclick="togglePDF('documents/study2.pdf')">Document 2</a></li>
+            <li><a href="#" onclick="togglePDF('documents/study3.pdf')">Document 3</a></li>
         </ul>
 
         <!-- Hidden iframe, which will be shown when a document is clicked -->
