--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yodai Group Announcements</title>
+    <title>yodai</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,8 +73,8 @@
     </header>
 
     <section>
-        <h2>Welcome to Yodai Group</h2>
-        <p>Welcome to the official announcements page of Yodai Group! Stay updated with the latest information and news about our projects and activities.</p>
+        <h2>Welcome to yodai Group</h2>
+        <p>Welcome to the official announcements page of yodai Group! Stay updated with the latest information and news about our projects and activities.</p>
     </section>
 
     <section>
@@ -117,7 +117,7 @@
                 <p>İlhami ULUĞTÜRKKAN</p>
             </div>
         </div>
-        <p>We are Yodai Group, a passionate team of developers and enthusiasts dedicated to building solutions that make a difference. Our goal is to deliver high-quality software projects that solve real-world problems.</p>
+        <p>We are yodai Group, a passionate team of developers and enthusiasts dedicated to building solutions that make a difference. Our goal is to deliver high-quality software projects that solve real-world problems.</p>
         <p>We specialize in web development, AI, and data-driven solutions, and are always open to new challenges and collaborations. Join us on our journey to create impact and innovation.</p>
     </section>
 
